2011-08-02  Valek Filippov

		* EMF: re-pack EMF+ changes back to parent
		* EMF: 9 more record parsed
		* Added "utxt" format
		* Initial support for CLP files, saving of parts into files.

2011-08-01  Valek Filippov

		* MF: gen_tree fix, init EMF+ crafting 
		* MF: fix saving of EMFs, more EMF+ crafting
		* MF: EFM+ initial obj crafting
		* EMF: parse public comment Begin/EndGroup

2011-07-31  Valek Filippov

		* EMF: more EMF+ records parsing

2011-07-30  Valek Filippov

		* EMF: Start to parse EMF+ records.
		* EMF: Parse EMF+ objects and some records.

2011-07-23  Valek Filippov

		* VSD: Some chunks/streams renaming in Fonts, mark 'Background' pages as 'Page BG',
			tweek '[Data referenced..] color to not match with default 'selected row' in GtkTree.

2011-07-22  Valek Filippov

		* VSD: Char -- colorID and color

2011-07-20  Valek Filippov

		* VSD: Fill/Line opacity -- "off by one"
		* VSD: Line cap mapping between VSD and SVG

2011-07-19  Valek Filippov

		* VSD: Add num of chars to ParaIX chunk.
		* VSD: Naive parsing of 'TextIX' chunk.
		* VSD: fix blocks parsing for strings in ver 6
		* VSD: complete Fill/Line parsing for ver 11 (transparency,cap,shadow offsets).

2011-07-16  Valek Filippov

		* VSD: fix version for chunks, tweek 'Char' to not parse ver11 fields in ver6 file
		* CDR: more 'loda' functions

2011-07-14  Valek Filippov

		* VSD: fix 'Line' blocks.
		* CDR: 'ftil' 

2011-07-14  Valek Filippov

		* CDR: loda header parsing.

2011-07-13  Valek Filippov

		* CDR: trfd parsing.

2011-07-13  Valek Filippov

		* Initial support for CDR.

2011-07-12  Valek Filippov

		* Parse VSD SplineStart/Knot.

2011-07-11  Valek Filippov

		* Parse FontFace for vsd ver 11.

2011-07-11  Valek Filippov

		* Fix issue with multiparsing of blocks in vsdchunks.

2011-07-09  Valek Filippov

		* Split WMF of emfparse, add more parsing for WMF records.

2011-07-08  Valek Filippov

		* Move 'Add record' from mfview
		* Change record size +-4 bytes