@@ -19,11 +19,9 @@ import gobject
 import gtk
 import tree
 import hexdump
-import pub
-import pubblock
-import escher
-import quill
+import pub, pubblock, escher, quill
 import vsd
+import xls
 import gsf
 
 def open(src,page,iter=None):
@@ -58,7 +56,9 @@ def get_children(page,infile,parent):
 			type = "PUB"
 			pub.parse (page.model,data,iter1)
 		if infname == "VisioDocument":
-			vsd.parse (page, data, iter1) 
+			vsd.parse (page, data, iter1)
+		if infname == "Book" or infname == "Workbook":
+			xls.parse (page, data, iter1)
 		if (infchild.num_children()>0):
 			get_children(page,infchild,iter1)
 	return type
