@@ -1,3 +1,7 @@
+2011-08-03  Valek Filippov
+
+		* XLS: Initial support
+
 2011-08-02  Valek Filippov
 
 		* EMF: re-pack EMF+ changes back to parent
